infra/envs/prod/primary/routes.tf
resource "aws_route" "egress_tgw_to_nat" {
  for_each               = module.egress_vpc.tgw_route_table_ids
  route_table_id         = each.value
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = module.egress_vpc.nat_gateway_ids[0]
}

resource "aws_route" "spoke1_private_to_tgw" {
  for_each               = module.spoke1_vpc.private_route_table_ids
  route_table_id         = each.value
  destination_cidr_block = "0.0.0.0/0"
  transit_gateway_id     = module.tgw.tgw_id
  depends_on             = [module.spoke1_attachment]
}

resource "aws_route" "egress_nat_to_spoke1" {
  route_table_id         = module.egress_vpc.nat_gateway_route_table_id
  destination_cidr_block = local.spoke1_cidr
  transit_gateway_id     = module.tgw.tgw_id
  depends_on             = [module.egress_attachment]
}

resource "aws_ec2_transit_gateway_route" "spoke_default_to_egress" {
  destination_cidr_block         = "0.0.0.0/0"
  transit_gateway_attachment_id  = module.egress_attachment.attachment_id
  transit_gateway_route_table_id = module.tgw.route_table_ids["spoke"]
}
